--- a/package.json
+++ b/package.json
@@ -13,7 +13,9 @@
     "react-redux": "^7.1.3",
     "react-router-dom": "^5.1.2",
     "react-scripts": "3.2.0",
-    "redux": "^4.0.4"
+    "redux": "^4.0.4",
+    "redux-observable": "^1.2.0",
+    "rxjs": "^6.5.3"
   },
   "scripts": {
     "start": "react-scripts start",
