--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
   "dependencies": {
     "@material-ui/core": "^4.7.1",
     "@material-ui/icons": "^4.5.1",
+    "axios": "^0.19.0",
     "i18next": "^19.0.1",
     "node-sass": "^4.13.0",
     "react": "^16.12.0",
@@ -21,7 +22,8 @@
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
-    "eject": "react-scripts eject"
+    "eject": "react-scripts eject",
+    "gateway": "cd gateway && node app.js"
   },
   "eslintConfig": {
     "extends": "react-app"
